tests/ui/unused-crate-deps/deny-cmdline.stderr
error: extern crate `bar` is unused in crate `deny_cmdline`
  --> $DIR/deny-cmdline.rs:7:1
   |
LL | fn main() {}
   | ^
   |
   = help: remove the dependency or add `use bar as _;` to the crate root
   = note: requested on the command line with `-D unused-crate-dependencies`

error: aborting due to 1 previous error

